--- a/epic-api/package.json
+++ b/epic-api/package.json
@@ -32,6 +32,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/hapi__joi": "^17.1.7",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "mysql": "^2.18.1",
     "pas": "^3.0.7",
     "passport": "^0.4.1",
@@ -46,6 +47,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
