избавиться от стандартной разметки

--- a/epic-api/frontend/package.json
+++ b/epic-api/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3031",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
