--- a/epic-api/frontend/package.json
+++ b/epic-api/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@svgr/cli": "^6.1.2",
     "next": "12.0.7",
     "react": "17.0.2",
